Yet another change

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     html"
       title Jumbotron Template for Bootstrap
       // Bootstrap core CSS
-      link(href='css/bootstrap.css', rel='stylesheet')
+      link(href='stylesheets/bootstrap.css', rel='stylesheet')
       nav.navbar.navbar-inverse.navbar-fixed-top
         .container
           .navbar-header
