Yet another change

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
   body
-    html"
+    html
       title Jumbotron Template for Bootstrap
       // Bootstrap core CSS
       link(href='stylesheets/bootstrap.css', rel='stylesheet')
