--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,11 @@
 doctype html
 html
   head
-  	title Jumbotron Template for Bootstrap
-      // Bootstrap core CSS
-    link(href='stylesheets/bootstrap.css', rel='stylesheet')
   body
+    html
+      title Jumbotron Template for Bootstrap
+      // Bootstrap core CSS
+      link(href='css/bootstrap.css', rel='stylesheet')
       nav.navbar.navbar-inverse.navbar-fixed-top
         .container
           .navbar-header
@@ -14,7 +15,7 @@ html
               span.icon-bar
               span.icon-bar
             a.navbar-brand(href='#') Project name
-           #navbar.collapse.navbar-collapse
+          #navbar.collapse.navbar-collapse
             ul.nav.navbar-nav
               li
                 a(href='/') Home
@@ -24,7 +25,7 @@ html
                 a(href='/contact') Contact
           // /.nav-collapse
         block content
-          hr
-            footer
-              p © 2016 Company, Inc.
+        hr
+        footer
+          p © 2016 Company, Inc.
       // /container
