--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,3 +1,4 @@
+doctype html
 html
   head
   	title Jumbotron Template for Bootstrap
@@ -6,24 +7,24 @@ html
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
       .container
-          .navbar-header
-            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-              span.sr-only Daveux Tech
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand(href='#') Project name
-          #navbar.collapse.navbar-collapse
-            ul.nav.navbar-nav
-              li
-                a(href='/') Home
-              li
-                a(href='/about') About
-              li
-                a(href='/contact') Contact
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+            span.sr-only Daveux Tech
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar 
+          a.navbar-brand(href='#') Project name 
+        #navbar.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/') Home
+            li
+              a(href='/about') About
+            li
+              a(href='/contact') Contact
           // /.nav-collapse
-        block content  
-          hr
-          footer
-            p © 2019 Company, Inc.
+    block content  
+      hr
+      footer
+        p © 2019 Company, Inc.
       // /container
