Yet another change

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,5 +26,5 @@ html
     block content
     hr
     footer
-    p.text-center © 2019 Company, Inc.
+    p(class='text-center') © 2019 Company, Inc.
     // /container
