--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,8 @@ html
             li
               a(href='/contact') Contact
         // /.nav-collapse
-    block content
+    .container
+     block content
     hr
     footer
     p(class='text-center') © 2019 Company, Inc.
