--- a/views/contact.jade
+++ b/views/contact.jade
@@ -2,4 +2,8 @@ extends layout
 
 block content
  .container
-  form
+  form(method='post', action='contact/send')
+   h1 Contact
+   .form-group
+   	 label Name
+   	 input.form-control(type='text', name='name', placeholder='Enter Name')
