--- a/views/contact.jade
+++ b/views/contact.jade
@@ -13,4 +13,5 @@ block content
    	.form-group
    	 label Message
    	 textarea.form-control(name='message', placeholder='Enter Message')
+   	button.btn.btn-default(type='submit') Submit
 
